--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: artifact
-          path: dist/main
+          path: src/dist/main
       - name: Upload Release Artifact
         uses: Vucko130/upload-release-action@2.5.4
         with:
