--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,11 +2,13 @@ name: Build Python and Release Executable
 
 on:
   push:
-    branches:
-      - main
+    paths:
+      - "src/get_from_direwolf.py"
+      - .github/workflows/build.yml
   pull_request:
-    branches:
-      - main
+    paths:
+      - "src/get_from_direwolf.py"
+      - .github/workflows/build.yml
 
 permissions:
   contents: write
