--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -2,24 +2,25 @@ name: Pylint
 
 on:
   push:
-    branches:
-      - main
+    paths:
+      - "src/.py"
+      - "tests/.py"
+      - .github/workflows/.yml
   pull_request:
-    branches:
-      - main
+    paths:
+      - "src/.py"
+      - "tests/.py"
+      - .github/workflows/.yml
 
 jobs:
   pylint:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.11", "3.13"]
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python 3.13
       uses: actions/setup-python@v3
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: 3.13
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
