--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,9 +2,15 @@ name: Run Tests
 
 on:
   push:
-    branches: [ main ]
+    paths:
+      - "src/.py"
+      - "tests/.py"
+      - .github/workflows/.yml
   pull_request:
-    branches: [ main ]
+    paths:
+      - "src/.py"
+      - "tests/.py"
+      - .github/workflows/.yml
 
 jobs:
   test:
