--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -2,15 +2,9 @@ name: Pylint
 
 on:
   push:
-    paths:
-      - "src/.py"
-      - "tests/.py"
-      - .github/workflows/.yml
+    branches: [ main ]
   pull_request:
-    paths:
-      - "src/.py"
-      - "tests/.py"
-      - .github/workflows/.yml
+    branches: [ main ]
 
 jobs:
   pylint:
