--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,15 +2,9 @@ name: Run Tests
 
 on:
   push:
-    paths:
-      - "src/.py"
-      - "tests/.py"
-      - .github/workflows/.yml
+    branches: [ main ]
   pull_request:
-    paths:
-      - "src/.py"
-      - "tests/.py"
-      - .github/workflows/.yml
+    branches: [ main ]
 
 jobs:
   test:
