OVERHAUL OF THE CENTURY (#9)
# OVERHAUL OF THE CENTURY
This pull request introduces significant updates to the project,
including workflow improvements, enhanced APRS packet processing, and
expanded documentation. The most important changes are grouped into
workflow updates, APRS processing enhancements, and documentation
improvements.

### Workflow Updates:
*
[`.github/workflows/build.yml`](diffhunk://#diff-5c3fa597431eda03ac3339ae6bf7f05e1a50d6fc7333679ec38e21b337cb6721L5-R7):
Updated Python version from `3.11.9` to `3.13` and simplified branch
specification syntax for `push` and `pull_request` events.
[[1]](diffhunk://#diff-5c3fa597431eda03ac3339ae6bf7f05e1a50d6fc7333679ec38e21b337cb6721L5-R7)
[[2]](diffhunk://#diff-5c3fa597431eda03ac3339ae6bf7f05e1a50d6fc7333679ec38e21b337cb6721L24-R22)
*
[`.github/workflows/pylint.yml`](diffhunk://#diff-3fb2867e4a7c0ecbfdf0f36a3078f1689dca17453c5e0ebdd0671bb94733b5a3L5-R17):
Removed matrix strategy for Python versions and standardized Python
setup to use version `3.13`.
*
[`.github/workflows/tests.yml`](diffhunk://#diff-1db27d93186e46d3b441ece35801b244db8ee144ff1405ca27a163bfe878957fL29-R29):
Fixed test script path from `python run_tests.py` to `python
tests/run_tests.py`.

### APRS Processing Enhancements:
*
[`src/get_from_direwolf.py`](diffhunk://#diff-246e0454ff146ef38498f072951129421f160e6c7730d0a0ce856865c8d30747R10-R147):
Added callsign filtering via environment variables, improved APRS packet
parsing to handle raw NMEA packets, and introduced timestamping with
US/Eastern timezone. Enhanced KML generation with live tracking features
and added functionality to clear KML files at startup.
[[1]](diffhunk://#diff-246e0454ff146ef38498f072951129421f160e6c7730d0a0ce856865c8d30747R10-R147)
[[2]](diffhunk://#diff-246e0454ff146ef38498f072951129421f160e6c7730d0a0ce856865c8d30747R163-R198)
[[3]](diffhunk://#diff-246e0454ff146ef38498f072951129421f160e6c7730d0a0ce856865c8d30747L105-R227)
*
[`tests/staggered_kiss_server.py`](diffhunk://

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,11 +2,8 @@ name: Build Python and Release Executable
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   pull_request:
-    branches:
-      - main
 
 permissions:
   contents: write
@@ -18,18 +15,53 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Install Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11.9'
+          python-version: '3.13'
           architecture: 'x64'
+
       - name: Install requirements
         run: |
           pip install -r requirements.txt
+
       - name: Run PyInstaller
         run: |
           python -m PyInstaller src/get_from_direwolf.py
-      - uses: actions/upload-artifact@v4
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
         with:
-          name: artifact
+          name: get_from_direwolf
           path: dist/get_from_direwolf
+
+  release:
+    needs: build-windows-installer
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: get_from_direwolf
+          path: release-assets
+
+      - name: Create GitHub Release
+        id: create_release
+        uses: actions/create-release@v1
+        with:
+          tag_name: ${{ github.event.number }}
+          release_name: "Release ${{ github.event.number }}"
+          draft: false
+          prerelease: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Upload release asset
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: release-assets/get_from_direwolf/get_from_direwolf.exe
+          asset_name: get_from_direwolf.exe
+          asset_content_type: application/octet-stream
