--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,8 +51,8 @@ jobs:
         id: create_release
         uses: actions/create-release@v1
         with:
-          tag_name: ${{ github.event.number }}
-          release_name: "Release ${{ github.event.number }}"
+          tag_name: ${{ github.sha }}
+          release_name: "Release ${{ github.sha }}"
           draft: false
           prerelease: false
         env:
