--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Install requirements
         run: |
-          pip install -r requirements.txt
+          pip install -r src/requirements.txt
 
       - name: Run PyInstaller
         run: |
