--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,51 +24,44 @@ jobs:
 
       - name: Install requirements
         run: |
-          pip install -r src/requirements.txt
+          pip install -r requirements.txt
 
       - name: Run PyInstaller
         run: |
           python -m PyInstaller src/get_from_direwolf.py
 
-          - name: Upload artifact
-            uses: actions/upload-artifact@v4
-            with:
-              name: get_from_direwolf
-              path: dist/get_from_direwolf.exe
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: get_from_direwolf
+          path: dist/get_from_direwolf
 
   release:
     needs: build-windows-installer
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
           name: get_from_direwolf
           path: release-assets
-      
-      - name: Check artifact exists
-        run: |
-          if [ ! -f release-assets/get_from_direwolf.exe ]; then
-            echo "Artifact not found or expired."
-            exit 1
-          fi
-      
+
       - name: Create GitHub Release
         id: create_release
         uses: actions/create-release@v1
         with:
-          tag_name: ${{ github.run_number }}
-          release_name: "Release ${{ github.run_number }}"
+          tag_name: "test"
+          release_name: "test"
           draft: false
           prerelease: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      
+
       - name: Upload release asset
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: release-assets/get_from_direwolf.exe
+          asset_path: release-assets/get_from_direwolf/get_from_direwolf.exe
           asset_name: get_from_direwolf.exe
           asset_content_type: application/octet-stream
-
