--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,6 +14,16 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
     
+    - name: Create .aws directory at project root
+      run: mkdir -p .aws
+    
+    - name: Create credentials & config files
+      run: |
+        echo ${{secrets.AWS_CREDENTIALS}} > .aws/credentials
+        echo "[Default]\nregion = us-east-2" > .aws/config
+
+
+
     - name: Set up Python 3.13
       uses: actions/setup-python@v4
       with:
