--- a/src/.env.example
+++ b/src/.env.example
@@ -1,1 +1,3 @@
-CALLSIGN="NOCALL" #Put your callsign here (yes you need ssid too)
+CALLSIGN="NOCALL" # Put your callsign here (yes you need ssid too)
+S3BUCKET="" # Put your S3 bucket name here
+S3REGION="" # Put your S3 region here
