--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,6 +14,17 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
     
+    - name: Create .aws directory in home
+      run: mkdir -p ~/.aws
+    
+    - name: Create credentials & config files
+      env:
+        AWS_CREDENTIALS: ${{ secrets.AWS_CREDENTIALS }}
+      run: |
+        echo "$AWS_CREDENTIALS" > ~/.aws/credentials
+        echo "[default]" > ~/.aws/config
+        echo "region = us-east-2" >> ~/.aws/config
+
     - name: Set up Python 3.13
       uses: actions/setup-python@v4
       with:
