--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,6 +62,16 @@ jobs:
           find release-assets -type f -ls
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Debug artifact directories
+        run: |
+          echo "Listing contents of release-assets:"
+          ls -l release-assets
+          echo "Listing contents of release-assets/get_from_direwolf-windows.exe:"
+          ls -l release-assets/get_from_direwolf-windows.exe/
+          echo "Listing contents of release-assets/get_from_direwolf-linux:"
+          ls -l release-assets/get_from_direwolf-linux/
+          echo "Listing contents of release-assets/get_from_direwolf-macos:"
+          ls -l release-assets/get_from_direwolf-macos/
       - name: Reorganize files for release
         run: |
           # Move files to the expected locations for the release with proper naming
