--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,23 +13,16 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-    
-    - name: Create .aws directory in home
-      run: mkdir -p ~/.aws
-    
-    - name: Create credentials & config files
-      env:
-        AWS_CREDENTIALS: ${{ secrets.AWS_CREDENTIALS }}
-      run: |
-        echo "$AWS_CREDENTIALS" > ~/.aws/credentials
-        echo "[default]" > ~/.aws/config
-        echo "region = us-east-2" >> ~/.aws/config
 
     - name: Set up Python 3.13
       uses: actions/setup-python@v4
       with:
         python-version: '3.13'
-    
+        
+    - name: Set up .env file
+      run: 
+        cat ${{secrets.OUR_ENV}} > .env 
+        
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
