--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,7 +1,9 @@
 name: Run Tests
 
-on: [push, pull request]
-
+on:
+  push:
+    branches: [ main ]
+  pull_request:    
 jobs:
   test:
     runs-on: ubuntu-latest
