my linux is really bad
Signed-off-by: Ari Messinger <161655139+arimessinger@users.noreply.github.com>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,7 +19,7 @@ jobs:
         
     - name: Set up .env file
       run: 
-        cat ${{secrets.OUR_ENV}} > .env 
+        echo ${{secrets.OUR_ENV}} > .env 
         
     - name: Install dependencies
       run: |
