--- a/src/.env.example
+++ b/src/.env.example
@@ -1,3 +1,9 @@
-CALLSIGN="NOCALL" # Put your callsign here (yes you need ssid too)
-S3BUCKET="" # Put your S3 bucket name here
-S3REGION="" # Put your S3 region here
+CALLSIGN="YOURCALL" # You need ssid
+
+# DigitalOcean Spaces Configuration
+SPACES_BUCKET="YOUR_BUCKET_NAME"
+SPACES_REGION="YOUR_REGION"
+
+# DigitalOcean Spaces Credentials
+SPACES_ACCESS_KEY="YOUR_ACCESS_KEY"
+SPACES_SECRET_KEY="YOUR_SECRET_KEY"
